	to ghostscript.
	
	* src/gv_message.h: Add description of new "--password=PASSWORD" option.
	
	* src/main.c (main): Parse new password-Option from command line
	
	* src/main_globals.h: New global variable for the PDF password.
	
	* src/ps.c (psscan): Pass actual PDF password to ghostscript.
	
	* src/versionp.h: Bump required resource version.

	* src/gv-update-userconfig.in: remove GV.gsCmdConvPDF iff necessary.

2008-08-10  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.91.
	
	* src/resource.c (resource_buildDatabase): Setting resource
	"gv.arguments" is useless as it is not read.
	
	* src/Makefile.am: Append the contents of gv_misc_res.dat to
	gv-update-userconfig, too.
	
	* src/gv-update-userconfig.in: Handling of -n, -N and -s.

2008-08-09  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/resource.c(resource_checkResources): Corrected misspellings in
	message displayed to the user.
	
	* src/gv-update-userconfig.in: "--help", "--usage" as an alias for "-h".
	"sub compare" fixed for version strings of different length.
	
	* doc/gv-update-userconfig.1: Describe options "-h", "--help",
	"--usage", "-r". s/gv/GNU gv/ according to GNU guidelines.
	
	* NEWS, src/versionp.h: Update release date for GNU gv 3.6.5.90

2008-08-02  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/action.c (action_print_pos): Code cleanup
	
	* src/callbacks.c (cb_printpos, cb_doPrintPos): likewise

2008-08-02  Thanh Han The <hanthethanh@gmail.com>

	* arc/action.c (action_savepos): Handling the new "z"-key for saving
        positions.
	
	* src/action.c (action_print_pos): Handling the new "u"-key for saving
        positions.

	* src/actions.h: likewise for the prototypes
	
	* src/callbacks.c: New static globals last_psx, last_psy for the last
	cursor position
	
	* src/callbacks.c (cb_printpos): Displaying of popup dialog for entering
	command to save
	
	* src/callbacks.c (cb_doPrintPos): saving the command entered above
	