@@ -199,7 +199,7 @@ gv_intern_res_unix.dat :
 	@echo "!########## gv_intern_res.dat (generated by makefile)" >> gv_intern_res_unix.dat
 	@echo ""							>> gv_intern_res_unix.dat
 	@echo "GV.gsInterpreter:	gs" >> gv_intern_res_unix.dat
-	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname=%s -sDSCname=%s pdf2dsc.ps -c quit" >> gv_intern_res_unix.dat
+	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname=%s -sDSCname=%s %s pdf2dsc.ps -c quit" >> gv_intern_res_unix.dat
 	@echo "GV.gsCmdConvPDF:	gs -dNOPAUSE -dQUIET -dBATCH -sDEVICE=pswrite -sOutputFile=%s -f %s -c save pop quit" >> gv_intern_res_unix.dat
 	@echo "GV.gsX11Device:		-sDEVICE=x11" >> gv_intern_res_unix.dat
 	@echo "GV.gsX11AlphaDevice:	-sDEVICE=x11 -dTextAlphaBits=4 -dGraphicsAlphaBits=2 -dMaxBitmap=10000000 -dNOPLATFONTS" >> gv_intern_res_unix.dat
